<resources>
    <string name="app_name">GD</string>
    <string name="facebook_app_id">1678953245523752</string>
    <string name="fb_login_protocol_scheme">fb1678953245523752</string>

    <string name="info">請選擇下列登入方式</string>
    <string name="guest_login">訪客登入</string>
    <string name="title">GD佳德騎士俱樂部</string>
    <string name="title_main">首頁</string>
    <string name="title_cart">購物車</string>
    <string name="title_favo">收藏</string>
    <string name="title_seek">搜尋</string>
    <string name="title_news">最新動態</string>
    <string name="title_events">最新活動</string>
    <string name="title_detail">商品介紹</string>
    <string name="title_feature">商品特色</string>
    <string name="drawer_title">商品分類</string>
    <string name="item_sol">台灣SOL</string>
    <string name="item_zeus">台灣ZEUS</string>
    <string name="item_kyt">台灣KYT</string>
    <string name="item_thh">台灣THH</string>
    <string name="item_nikko">台灣Nikko</string>
    <string name="item_onza">台灣ONZA</string>
    <string name="drawer_about">關於</string>
    <string name="item_share">分享App</string>
    <string name="item_service">商店介紹/客服</string>
    <string name="item_logout">登出</string>

    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

    <string name="string_login_fail">登入失敗</string>
    <string name="string_login_success">登入成功</string>

    <string name="button_add_to_cart">加入購物車</string>
</resources>
